--- a/src/aspect/private/analyze_includes/BUILD
+++ b/src/aspect/private/analyze_includes/BUILD
@@ -19,7 +19,7 @@ py_binary(
     name = "analyze_includes",
     srcs = ["main.py"],
     # Compatibility to --noexperimental_python_import_all_repositories
-    imports = ["../.."],
+    imports = ["../../../.."],
     legacy_create_init = False,
     main = "main.py",
     visibility = ["//visibility:public"],
