--- a/src/private/BUILD
+++ b/src/private/BUILD
@@ -1,7 +1,7 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 
 bzl_library(
-    name = "utils",
+    name = "utils_bzl",
     srcs = [
         "utils.bzl",
     ],
