test: Add benchmarks for overall DWYU performance
Those new benchmarks analyze the whole analysis step for certain scenarios.

--- a/.bazelignore
+++ b/.bazelignore
@@ -36,6 +36,8 @@ test/aspect/using_transitive_dep
 test/aspect/valid
 test/aspect/virtual_includes
 
+test/benchmark/generated
+
 test/cc_toolchains/mocked
 
 test/workspace_integration
