chore: Introduce clang-format to the development tools
Since we are a rule set aimed at C++ projcts, our own C/C++ code should
follow a consistent style.
Furthermore, we intend to introduce C++ based tools to DWYU and want to
format our own source code properly.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -63,3 +63,9 @@ repos:
         name: "mypy"
         # We overwrite the args as we configure mypy via our mypy.ini
         args: [ ]
+
+  - repo: https://github.com/pre-commit/mirrors-clang-format
+    rev: v20.1.8
+    hooks:
+    -   id: clang-format
+        types_or: [c++, c]
