--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,8 +52,7 @@ repos:
     rev: v0.12.7
     hooks:
       - id: ruff-format
-      # Linting
-      - id: ruff
+      - id: ruff-check
         args: [ --fix ]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
