--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
       - id: check-shebang-scripts-are-executable
       - id: check-toml
       - id: check-json
+      - id: check-yaml
       - id: mixed-line-ending
         args: [ --fix=lf ]
       # Code style
