--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
       - id: check-toml
       - id: check-json
       - id: check-yaml
+      - id: check-symlinks
       - id: mixed-line-ending
         args: [ --fix=lf ]
       # Code style
