chore: Ensure no merge conflicts leftovers are in files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,7 @@ repos:
       - id: check-json
       - id: check-yaml
       - id: check-symlinks
+      - id: check-merge-conflict
       - id: mixed-line-ending
         args: [ --fix=lf ]
       # Code style
