test(aspect): Fix errors in tests for processing defines
Only worked due to quirks in our pcpp based preprocessing logic

--- a/test/aspect/defines/BUILD
+++ b/test/aspect/defines/BUILD
@@ -11,8 +11,8 @@ cc_library(
     hdrs = ["defines_from_bazel_target.h"],
     copts = select({
         # Strictly speaking Windows does not automatically equal MSVC, but does so in our integration tests
-        "@platforms//os:windows": ["/DSOME_COPT 42"],
-        "//conditions:default": ["-DSOME_COPT 42"],
+        "@platforms//os:windows": ["/DSOME_COPT=42"],
+        "//conditions:default": ["-DSOME_COPT=42"],
     }),
     defines = ["SOME_DEFINE"],
     local_defines = ["LOCAL_DEFINE"],
