--- a/dwyu/aspect/private/analyze_includes/BUILD
+++ b/dwyu/aspect/private/analyze_includes/BUILD
@@ -11,7 +11,8 @@ py_library(
         "std_header.py",
         "system_under_inspection.py",
     ],
-    visibility = [":__subpackages__"],
+    #visibility = [":__subpackages__"],
+    visibility = ["//dwyu/aspect:__subpackages__"],
     deps = ["@dwyu_pcpp//:pcpp"],
 )
 
