feat(aspect): First bite of switching implementation to C++
We received only few functional defects in the last months, but several
issues regarding performance were raised. We could mitigate some of those
due to community contributions fixing some bad complexity in our algorithms.
Still, performance is lacking in large projects or in certain edge cases
for complex code.

We experimented with addressing this by using the CC toolchain preprocessor.
Unfortunately, this failed as its impossible to obtain the information
about direct includes this way. We might try again using a
C++ preprocessor library to do the same as we do today in Python, but
with a more efficient implementation. This is however work for a future
patch, as it is a quite big change.
One of the reasons to use Python was to ease coming up with a prototype for
this projects idea and to facilitate fast iterations. By now the core
structure is mostly stable and we have a good test coverage. Thus, now we
are ready to exchange the implementation with something new.

For now, we take a first bit of switching to a C++ based implementation
with the tool processing the CompilationContext values of the CC targets
under inspection to unroll the values from TreeArtifacts (e.g. header files).
This is a small piece of code which is easy to migrate, but at the same time
offers considerable performance improvements. This tool is executed quite
often (once for each direct dependency of all CC targets under inspection).
Thus, the significant overhead of executing something with the hermetic
Python toolchain (thousands of symlinks for each action) is measurable.
By using a C++ based tool we get rid of the Python toolchain overhead.
A synthetic benchmark running DWYU on a project with many trivial CC
targets shows a speedup greater factor 2. If the code of the CC
targets grows in complexity, this speedup shrinks as the code analysis
then requires the majority of the time. So, in real projects no dramatic
speedup can be e

--- a/dwyu/private/BUILD
+++ b/dwyu/private/BUILD
@@ -1,9 +1,25 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
+load("@rules_cc//cc:cc_library.bzl", "cc_library")
 
 bzl_library(
     name = "utils_bzl",
     srcs = [
         "utils.bzl",
     ],
+    visibility = ["//dwyu:__subpackages__"],
+)
+
+cc_library(
+    name = "program_options",
+    srcs = ["program_options.cpp"],
+    hdrs = ["program_options.h"],
+    visibility = ["//dwyu:__subpackages__"],
+    deps = [":utils"],
+)
+
+cc_library(
+    name = "utils",
+    srcs = ["utils.cpp"],
+    hdrs = ["utils.h"],
     visibility = ["//dwyu:__subpackages__"],
 )
