--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: DWYU Unit tests
         run: bazel test //...
+      - name: Ensure DWYU C++ code is compliant to the desired C++ versions range
+        run: ./scripts/test_cpp_version_compliance.sh
       - name: Aspect integration tests scripts unittests
         run: ./scripts/test_aspect_tests_scripts.sh
       - name: Build examples
@@ -78,6 +80,18 @@ jobs:
       - name: Integration tests - Aspect
         if: runner.os == 'Windows'
         run: python test/aspect/execute_tests.py --only-default-version --no_output_base
+
+  integration-tests-aspect-cpp-impl:
+    strategy:
+      matrix:
+        os: [ ubuntu-24.04, macos-15, windows-2022 ]
+      fail-fast: false
+    runs-on: ${{ matrix.os }}
+    needs: [ fast-tests, integration-tests-examples ]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Integration tests - Aspect with C++ implementation
+        run: python test/aspect/execute_tests.py --no_output_base --only-default-version --cpp_impl_based
 
   integration-tests-apply-fixes:
     strategy:
