--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -9,6 +9,9 @@ bazel_dep(name = "rules_cc", version = "0.0.15")
 bazel_dep(name = "rules_python", version = "0.37.2")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
 
+# Keep in sync with third_party/dependencies.bzl
+bazel_dep(name = "nlohmann_json", version = "3.12.0")
+
 non_module_dependencies = use_extension("//third_party:extensions.bzl", "non_module_dependencies")
 use_repo(non_module_dependencies, "dwyu_pcpp")
 
