test(benchmark): Fix broken execution
The benchmarks need to be an own workspace, so the are not influenced by
the root level `.bazelignore` file.

--- a/.bazelignore
+++ b/.bazelignore
@@ -36,7 +36,7 @@ test/aspect/using_transitive_dep
 test/aspect/valid
 test/aspect/virtual_includes
 
-test/benchmark/generated
+test/benchmark
 
 test/cc_toolchains/mocked
 
