test(aspect): More robust implementation for set_cpp_standard test
We are not compiling the code. Thus, it is an implementation detail if a
missing header for an include statement actually causes an error. We could
also ignore such cases as part of a heuristic.
Therefore, we choose a test design which is based on a core DWYU principle
for which we will always fail.

--- a/test/aspect/set_cpp_standard/BUILD
+++ b/test/aspect/set_cpp_standard/BUILD
@@ -4,10 +4,17 @@ cc_library(
     name = "cpp_lib",
     srcs = ["cpp_lib.cpp"],
     hdrs = ["cpp_lib.h"],
+    deps = [":lib"],
 )
 
 cc_library(
     name = "use_specific_cpp_standard",
     hdrs = ["use_specific_cpp_standard.h"],
     copts = ["-std=c++17"],
+    deps = [":lib"],
+)
+
+cc_library(
+    name = "lib",
+    hdrs = ["lib.h"],
 )
