--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -12,17 +12,24 @@ bazel_dep(name = "bazel_skylib", version = "1.7.1")
 # Keep in sync with third_party/dependencies.bzl
 bazel_dep(name = "nlohmann_json", version = "3.12.0")
 
-non_module_dependencies = use_extension("//third_party:extensions.bzl", "non_module_dependencies")
-use_repo(non_module_dependencies, "dwyu_pcpp")
+non_module_dependencies_step_1 = use_extension("//third_party:extensions_step_1.bzl", "non_module_dependencies_step_1")
+use_repo(non_module_dependencies_step_1, "boost.wave", "com_github_nelhage_rules_boost", "dwyu_pcpp")
+
+non_module_dependencies_step_2 = use_extension("//third_party:extensions_step_2.bzl", "non_module_dependencies_step_2")
+use_repo(non_module_dependencies_step_2, "boost")
+
+# rules_boost dependencies
+bazel_dep(name = "platforms", version = "1.0.0")
+bazel_dep(name = "bzip2", version = "1.0.8")
+bazel_dep(name = "xz", version = "5.4.5.bcr.2")
+bazel_dep(name = "zlib", version = "1.3.1")
+bazel_dep(name = "zstd", version = "1.5.5.bcr.1")
 
 ###
 ### Development Dependencies
 ###
 
 bazel_dep(name = "aspect_bazel_lib", version = "2.21.2", dev_dependency = True)
-
-# Hidden dependencies of aspect_bazel_lib macro stardoc_with_diff_test
-bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
 python.toolchain(python_version = "3.8")
