build(quality): Use ty for Python type checking
`ty` is still in an alpha state. However, it is blazingly fast and works
quite well on our code. If we stumble upon a bug we can still deactivate
it.
When `ty` has a stable release, we will most likely drop `mypy`.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
