--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,6 +64,16 @@ repos:
         # We overwrite the args as we configure mypy via our mypy.ini
         args: [ ]
 
+  # https://github.com/astral-sh/ty
+  - repo: local
+    hooks:
+      - id: ty
+        name: ty
+        entry: uvx --python=3.12 ty==0.0.1-alpha.24 check
+        types: [python]
+        language: system
+        pass_filenames: false
+
   - repo: https://github.com/pre-commit/mirrors-clang-format
     rev: v20.1.8
     hooks:
