chore: Add doc for some 'ty' usage decisions

--- a/ty.toml
+++ b/ty.toml
@@ -2,4 +2,5 @@
 extra-paths = ["./test/aspect"]
 
 [rules]
+# Does not work with how the dynamically load modules for integration testing
 unresolved-attribute = "ignore"
