--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -72,6 +72,7 @@ repos:
         entry: uvx --python=3.12 ty==0.0.1-alpha.24 check
         types: [python]
         language: system
+        # To prevent API changes in one file breaking type annotations in another we run ont he full repository
         pass_filenames: false
 
   - repo: https://github.com/pre-commit/mirrors-clang-format
