--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -67,6 +67,21 @@ jobs:
       - name: Integration tests - CC toolchain
         run: python test/cc_toolchains/upstream/test.py --ci_mode
 
+  integration-tests-upstream_cc_toolchains-cpp-impl:
+    strategy:
+      matrix:
+        os: [ ubuntu-24.04, macos-15, windows-2022 ]
+      fail-fast: false
+    runs-on: ${{ matrix.os }}
+    needs: [ fast-tests ]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+      - name: Integration tests - CC toolchain
+        run: python test/cc_toolchains/upstream/test.py --ci_mode --use_cpp_impl
+
   integration-tests-aspect:
     strategy:
       matrix:
