feat(aspect): Deprecate feature 'experimental_set_cplusplus'
This is an edge case feature which can be resolved without any dedicated
logic, as shown in the `define_macros` example. The alternative is even
more powerful due to working for all macros, not just `__cplusplus`.

We do not intend to maintain the custom logic to determine the desired
C++ standard any further.

If it turns out there are use cases where utilizing `--cxxopts` is not
feasible, we will think about another approach where one can provide DWYU
with a list of custom defines via a support target through a provider.

--- a/examples/.bazelrc
+++ b/examples/.bazelrc
@@ -3,3 +3,13 @@ startup --max_idle_secs=10
 
 # The symlinks are cluttering the file tree without much value
 common --experimental_convenience_symlinks=ignore
+
+# Ease using the DWYU aspect
+build:dwyu --aspects=//:aspect.bzl%dwyu
+build:dwyu --output_groups=dwyu
+
+build:dwyu_with_macros --config=dwyu
+# 'FOO' is defined when DWYU preprocesses the code
+build:dwyu_with_macros --cxxopt=-DFOO
+# The C++ standard is set to C++20 when DWYU preprocesses the code
+build:dwyu_with_macros --cxxopt=-D__cplusplus=202002
