chore: Remove deprecated renovate ignores

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -17,8 +17,7 @@
   ],
   "ignoreDeps": [
     "bazel_skylib",
-    "com_google_protobuf",
-    "protobuf",
     "rules_python",
-    "rules_cc"]
+    "rules_cc"
+  ]
 }
