chore: Ignore all production dependencies for renovate
The contract in bzlmod is to depend on the minimum required version, not
the latest greatest. Otherwise users could not depend on you without having
to upgrade all shared dependencies.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -17,7 +17,13 @@
   ],
   "ignoreDeps": [
     "bazel_skylib",
+    "bzip2",
+    "nlohmann_json",
+    "platforms",
     "rules_python",
-    "rules_cc"
+    "rules_cc",
+    "xz",
+    "zlib",
+    "zstd"
   ]
 }
