fix(aspect): Properly process non trivial implementation_deps
Because of bug https://github.com/bazelbuild/bazel/issues/19663 we are
missing the information from `implementation_deps` to properly process them
if they are from an external workspace or modifying their include paths.
This was not discovered until now as `implementation_deps` to workspace
internal targets worked if they did not manipulate the include paths. In
such a case we could still resolve the headers through the include path
pointing to the workspace root, which is essentially always there.

--- a/test/aspect/MODULE.bazel
+++ b/test/aspect/MODULE.bazel
@@ -55,6 +55,12 @@ local_path_override(
     path = "complex_includes/ext_repo",
 )
 
+bazel_dep(name = "impl_deps_external_test_repo")
+local_path_override(
+    module_name = "impl_deps_external_test_repo",
+    path = "implementation_deps/external_repo",
+)
+
 bazel_dep(name = "skip_external_deps_test_repo")
 local_path_override(
     module_name = "skip_external_deps_test_repo",
