--- a/test/aspect/implementation_deps/BUILD
+++ b/test/aspect/implementation_deps/BUILD
@@ -30,6 +30,38 @@ cc_library(
     ],
 )
 
+cc_library(
+    name = "use_complex_includes",
+    srcs = ["use_complex_includes.cpp"],
+    hdrs = ["use_complex_includes.h"],
+    implementation_deps = [
+        "//implementation_deps/support:lib_with_add_prefix",
+        "//implementation_deps/support:lib_with_includes",
+        "//implementation_deps/support:lib_with_strip_prefix",
+    ],
+)
+
+cc_library(
+    name = "use_defines",
+    srcs = ["use_defines.cpp"],
+    hdrs = ["use_defines.h"],
+    implementation_deps = [
+        "//implementation_deps/support:lib_with_defines",
+    ],
+)
+
+cc_library(
+    name = "use_external",
+    srcs = ["use_external.cpp"],
+    hdrs = ["use_external.h"],
+    implementation_deps = [
+        "@impl_deps_external_test_repo//:ext_lib",
+        "@impl_deps_external_test_repo//:lib_with_add_prefix",
+        "@impl_deps_external_test_repo//:lib_with_includes",
+        "@impl_deps_external_test_repo//:lib_with_strip_prefix",
+    ],
+)
+
 cc_binary(
     name = "binary_using_foo",
     srcs = ["binary_using_foo.cpp"],
