--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -2,7 +2,7 @@ bcr_test_module:
   module_path: "examples"
   matrix:
     platform: [ "macos", "ubuntu2204", "windows" ]
-    bazel: [ "6.x", "7.x", "8.x", "rolling" ]
+    bazel: [ "6.x", "7.x", "8.x", "9.*" ]
   tasks:
     verify_examples:
       name: "Verify examples"
