chore(deps): Add dev dependency to protobuf
We use the latest version although we don't need it. We are either way
waiting for the upcoming release allowing us to use precompiled protoc
instead of compiling it ourselves.

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -35,3 +35,6 @@ python = use_extension("@rules_python//python/extensions:python.bzl", "python", 
 python.toolchain(python_version = "3.8")
 
 bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
+
+# Too old protobuf causes build failures with abseil
+bazel_dep(name = "protobuf", version = "31.1", dev_dependency = True)
