chore: Streamline buildifier
- Explicit opt in and opt out of checks is easier to maintain
- No need to specify a config, it is picked up either way

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,9 +31,7 @@ repos:
         additional_dependencies:
           - mdformat-gfm
 
-  # Ground truth for available checks: https://github.com/bazelbuild/buildtools/blob/main/warn/warn.go
-  # Documentation for checks: https://github.com/bazelbuild/buildtools/blob/main/WARNINGS.md?plain=1
-  # An example config file can be generated with command 'buildifier --config=example'
+  # Documentation for checks: https://github.com/bazelbuild/buildtools/blob/main/WARNINGS.md
   # We use all checks, even non default ones with those exceptions:
   # - function-docstring: Not all functions require a docstring. If a docstring exists other checks ensure its sanity.
   # - function-docstring-header: A dedicated docstring header often provides no added value.
@@ -42,12 +40,8 @@ repos:
     rev: 8.2.1
     hooks:
       - id: buildifier
-        args: [ "--config=.buildifier.json" ]
       - id: buildifier-lint
-        args: [
-          "--diff_command='diff'",
-          "--config=.buildifier.json",
-        ]
+        args: [ --diff_command='diff' ]
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.14.5
