--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -2,7 +2,8 @@ bcr_test_module:
   module_path: "examples"
   matrix:
     platform: [ "macos", "ubuntu2204", "windows" ]
-    bazel: [ "6.x", "7.x", "8.x", "rolling" ]
+    # Keep in syn with: test/aspect/execute_tests.py, test/workspace_integration/test.py, test/cc_toolchains/upstream/test.py
+    bazel: [ "6.x", "7.x", "8.x" ]
   tasks:
     verify_examples:
       name: "Verify examples"
