feat(aspect): Add "no_preprocessing" to the C++ implementation
In our benchmarks the `no_preprocessor` mode is up to 8x faster for complex
code. However, for trivial code there is almost no difference and for medium
complexity code we see a speedup around 3x.
We still recommend using the preprocessor by default, as it yields the
more correct results and especially with the new C++ based implementation
is overall decently fast.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,8 +21,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: DWYU Unit tests
         run: bazel test //...
-      - name: Ensure DWYU C++ code is compliant to the desired C++ versions range
-        run: ./scripts/test_cpp_version_compliance.sh
+      - name: Ensure DWYU C++ code is compliant to the desired C++ versions range and without warnings
+        run: ./scripts/test_cpp_version_compliance_and_warnings.sh
       - name: Aspect integration tests scripts unittests
         run: ./scripts/test_aspect_tests_scripts.sh
       - name: Build examples
