--- a/dwyu/aspect/private/preprocessing/BUILD
+++ b/dwyu/aspect/private/preprocessing/BUILD
@@ -3,6 +3,13 @@ load("@rules_cc//cc:cc_library.bzl", "cc_library")
 load(":executable_stub.bzl", "executable_stub")
 
 cc_library(
+    name = "extract_includes",
+    srcs = ["extract_includes.cpp"],
+    hdrs = ["extract_includes.h"],
+    visibility = [":__subpackages__"],
+)
+
+cc_library(
     name = "preprocessing_hooks",
     hdrs = ["preprocessing_hooks.h"],
     visibility = [":__subpackages__"],
@@ -18,16 +25,25 @@ executable_stub(
 
 cc_binary(
     name = "main",
-    srcs = [
-        "main.cpp",
-        "preprocessing_hooks.h",
-    ],
+    srcs = ["main.cpp"],
     visibility = ["//visibility:public"],
     deps = [
         ":preprocessing_hooks",
         "//dwyu/private:program_options",
         "//dwyu/private:utils",
         "@boost.wave//:wave",
+        "@nlohmann_json//:json",
+    ],
+)
+
+cc_binary(
+    name = "main_no_preprocessing",
+    srcs = ["main_no_preprocessing.cpp"],
+    visibility = ["//visibility:public"],
+    deps = [
+        ":extract_includes",
+        "//dwyu/private:program_options",
+        "//dwyu/private:utils",
         "@nlohmann_json//:json",
     ],
 )
