--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -3,7 +3,7 @@ bcr_test_module:
   matrix:
     platform: [ "macos", "ubuntu2204", "windows" ]
     # Keep in syn with: test/aspect/execute_tests.py, test/workspace_integration/test.py, test/cc_toolchains/upstream/test.py
-    bazel: [ "6.x", "7.x", "8.x" ]
+    bazel: [ "7.2.1", "8.x" ]
   tasks:
     verify_examples:
       name: "Verify examples"
