build: Use a hermetic LLVM toolchain for development
Since C++ is now a fundamental part of our implementation, we should have
a proper ground truth for building and testing instead of whatever is by
chance available on the host system.

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -38,3 +38,15 @@ bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
 
 # Too old protobuf causes build failures with abseil
 bazel_dep(name = "protobuf", version = "31.1", dev_dependency = True)
+bazel_dep(name = "toolchains_llvm", version = "1.6.0", dev_dependency = True)
+
+llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
+llvm.toolchain(
+    llvm_version = "20.1.8",
+)
+use_repo(llvm, "llvm_toolchain")
+
+register_toolchains(
+    "@llvm_toolchain//:all",
+    dev_dependency = True,
+)
