--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,7 @@
+# Ensure we are using the hermetic C++ toolchain
+build --repo_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
+build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
+
 # Always tell why tests fail
 test --test_output=errors
 
