--- a/.bazelrc
+++ b/.bazelrc
@@ -2,6 +2,9 @@
 build --repo_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 
+build:clang_tidy --aspects=//tools/clang_tidy:aspect.bzl%clang_tidy
+build:clang_tidy --output_groups=clang_tidy
+
 # Always tell why tests fail
 test --test_output=errors
 
