--- a/test/aspect/MODULE.bazel
+++ b/test/aspect/MODULE.bazel
@@ -38,6 +38,8 @@ python.toolchain(python_version = "3.13")
 bazel_dep(name = "rules_cc", version = "0.0.1")
 bazel_dep(name = "platforms", version = "0.0.11")
 bazel_dep(name = "rules_shell", version = "0.4.1")
+bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
+bazel_dep(name = "boost.chrono", version = "1.87.0")
 
 ##
 ## Workspaces for test purposes
